Fix FBSSC submit button alignment

--- a/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
@@ -393,6 +393,11 @@ div.fbsmp-link-title {
   font-weight: bold;
 }
 
+form.fbss-comments-form .form-submit {
+  float: right;
+  margin: 0 0.25em;
+}
+
 form .fbsmp-icon-list input.form-submit,
 form .fbsmp-icon-list input.form-submit:hover,
 form .fbsmp-icon-list input.form-submit.hover,
